# efm8_usb_benchmarks

./: .gitignore  notes.txt
bulk/fw/keil/: USBCDC_Serial_Skelto.uvgui.shraken  USBCDC_Serial_Skelto.uvopt  USBCDC_Serial_Skelton.uvgui.shraken  USBCDC_Serial_Skelton.uvgui_shraken.bak  USBCDC_Serial_Skelton.uvopt  USBCDC_Serial_Skelton.uvproj  USBCDC_Serial_Skelton_uvopt.bak  USBCDC_Serial_Skelton_uvproj.bak
bulk/fw/keil/code/A51/: STARTUP.A51
bulk/fw/keil/code/source/: USB_CDC_Type_2.h  USB_CDC_UART.c  USB_CDC_UART.h  USB_Class_Requests_2.c  USB_Descriptor.c  USB_Descriptor.h  USB_ISR.c  USB_Main.c  USB_Main.h  USB_Main_2.c  USB_Standard_Requests.c  USB_Standard_Requests_2.h
bulk/fw/sdcc/: Makefile
bulk/fw/sdcc/code/source/: FIFO_RW.h  FIFO_WT_CD.c  FIFO_WT_ID.c  FIFO_WT_PD.c  FIFO_WT_XD.c  USB_CDC_Type.h  USB_CDC_UART.c  USB_CDC_UART.h  USB_Class_Requests.c  USB_Descriptor.c  USB_ISR.c  USB_Main.c  USB_Standard_Requests.c
bulk/sw/: Makefile  receive_test.c
interrupt/fw/keil/: usbhid_benchmark.uvgui.shraken  usbhid_benchmark.uvopt  usbhid_benchmark.uvproj
interrupt/fw/keil/code/A51/: STARTUP.A51
interrupt/fw/keil/code/include/: F3xx_USB0_InterruptServiceRoutine.h  F3xx_USB0_ReportHandler.h  init.h  main.h
interrupt/fw/keil/code/source/: F3xx_USB0_InterruptServiceRoutine.c  F3xx_USB0_ReportHandler.c  init.c  main.c
interrupt/fw/sdcc/: Makefile
interrupt/fw/sdcc/code/include/: F3xx_USB0_InterruptServiceRoutine.h  init.h  main.h
interrupt/fw/sdcc/code/source/: F3xx_USB0_InterruptServiceRoutine.c  FIFO_RW.c  (+7 more)
interrupt/sw/: CMakeLists.txt  benchmark.c
(+5 files in other folders)
